Worked on the patterns (sort of finished). needs to be tested!!!@!@!#@##@!